--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
     "commentTranslate.source": "Google",
     "files.defaultLanguage": "Python",
-    "qtForPython.designer.path": "C:\\Users\\Feich\\.virtualenvs\\Python-PmcDgZJe\\Lib\\site-packages\\PySide6\\designer.exe"
+    "qtForPython.designer.path": "C:\\Users\\Feich\\.virtualenvs\\Python-PmcDgZJe\\Lib\\site-packages\\PySide6\\designer.exe",
+    "editor.codeLens": true
 }
